--- a/assets/styles/intro-app-ui.less
+++ b/assets/styles/intro-app-ui.less
@@ -542,10 +542,10 @@
     .test-args() when ( @theme = 'light' ) {
         @styleName: Light;
         @textColor: @gray-dark;
-        @wireframeColor: @gray-lighter;
+        @wireframeColor: @gray-light;
         @wireframeBgColor: white;
         @bulletColor: @gray-dark;
-        @itemColor: @gray-lighter;
+        @itemColor: @gray-light;
         @playerItemColor: @gray-dark;
         @playerBgColor: @gray-darker;
 
@@ -596,7 +596,6 @@
         //  bulleted nav indicator
         //
         .carousel {
-            background-color: @wireframeBgColor;
 
             >nav {
                 bottom: 7%;
