--- a/assets/styles/keyframes.less
+++ b/assets/styles/keyframes.less
@@ -54,90 +54,93 @@
     100%{ opacity: 1;                transform: scale( 1 ); }
 }
 
+@itemColorLight: @gray-light;
+@itemColorDark: @gray-dark;
+
 @newTrackRed: #FF2D55;
 
 @-webkit-keyframes incomingTrackRedBgColorLight {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackRedBgColorLight {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-o-keyframes incomingTrackRedBgColorLight {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @keyframes incomingTrackRedBgColorLight {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackRedFillColorLight {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackRedFillColorLight {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-o-keyframes incomingTrackRedFillColorLight {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @keyframes incomingTrackRedFillColorLight {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackRedBgColorDark {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackRedBgColorDark {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-o-keyframes incomingTrackRedBgColorDark {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @keyframes incomingTrackRedBgColorDark {
     0%  { background-color: @newTrackRed; }
     70% { background-color: @newTrackRed; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 
 @-webkit-keyframes incomingTrackRedFillColorDark {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackRedFillColorDark {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-o-keyframes incomingTrackRedFillColorDark {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @keyframes incomingTrackRedFillColorDark {
     0%  { fill: @newTrackRed; }
     70% { fill: @newTrackRed; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 
 @newTrackGreen: #47cc5e;
@@ -145,85 +148,85 @@
 @-webkit-keyframes incomingTrackGreenBgColorLight {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackGreenBgColorLight {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-o-keyframes incomingTrackGreenBgColorLight {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @keyframes incomingTrackGreenBgColorLight {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackGreenFillColorLight {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackGreenFillColorLight {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-o-keyframes incomingTrackGreenFillColorLight {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @keyframes incomingTrackGreenFillColorLight {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackGreenBgColorDark {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackGreenBgColorDark {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-o-keyframes incomingTrackGreenBgColorDark {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @keyframes incomingTrackGreenBgColorDark {
     0%  { background-color: @newTrackGreen; }
     70% { background-color: @newTrackGreen; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 
 @-webkit-keyframes incomingTrackGreenFillColorDark {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackGreenFillColorDark {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-o-keyframes incomingTrackGreenFillColorDark {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @keyframes incomingTrackGreenFillColorDark {
     0%  { fill: @newTrackGreen; }
     70% { fill: @newTrackGreen; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 
 @newTrackYellow: #ffcc02;
@@ -231,85 +234,85 @@
 @-webkit-keyframes incomingTrackYellowBgColorLight {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackYellowBgColorLight {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-o-keyframes incomingTrackYellowBgColorLight {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @keyframes incomingTrackYellowBgColorLight {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackYellowFillColorLight {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackYellowFillColorLight {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-o-keyframes incomingTrackYellowFillColorLight {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @keyframes incomingTrackYellowFillColorLight {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackYellowBgColorDark {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackYellowBgColorDark {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-o-keyframes incomingTrackYellowBgColorDark {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @keyframes incomingTrackYellowBgColorDark {
     0%  { background-color: @newTrackYellow; }
     70% { background-color: @newTrackYellow; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 
 @-webkit-keyframes incomingTrackYellowFillColorDark {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackYellowFillColorDark {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-o-keyframes incomingTrackYellowFillColorDark {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @keyframes incomingTrackYellowFillColorDark {
     0%  { fill: @newTrackYellow; }
     70% { fill: @newTrackYellow; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 
 @newTrackBlue: #5ac8fa;
@@ -317,85 +320,85 @@
 @-webkit-keyframes incomingTrackBlueBgColorLight {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackBlueBgColorLight {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @-o-keyframes incomingTrackBlueBgColorLight {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 @keyframes incomingTrackBlueBgColorLight {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-lighter; }
+    100%{ background-color: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackBlueFillColorLight {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-moz-keyframes incomingTrackBlueFillColorLight {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @-o-keyframes incomingTrackBlueFillColorLight {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 @keyframes incomingTrackBlueFillColorLight {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-lighter; }
+    100%{ fill: @itemColorLight; }
 }
 
 @-webkit-keyframes incomingTrackBlueBgColorDark {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackBlueBgColorDark {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @-o-keyframes incomingTrackBlueBgColorDark {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 @keyframes incomingTrackBlueBgColorDark {
     0%  { background-color: @newTrackBlue; }
     70% { background-color: @newTrackBlue; }
-    100%{ background-color: @gray-dark; }
+    100%{ background-color: @itemColorDark; }
 }
 
 @-webkit-keyframes incomingTrackBlueFillColorDark {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-moz-keyframes incomingTrackBlueFillColorDark {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @-o-keyframes incomingTrackBlueFillColorDark {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 @keyframes incomingTrackBlueFillColorDark {
     0%  { fill: @newTrackBlue; }
     70% { fill: @newTrackBlue; }
-    100%{ fill: @gray-dark; }
+    100%{ fill: @itemColorDark; }
 }
 
 @-webkit-keyframes triggerTapPlay {
