created /phone-6, /phone-5, /phone-4 — intro sizes for backwards iPhone versions

--- a/assets/styles/custom-mixins.less
+++ b/assets/styles/custom-mixins.less
@@ -136,10 +136,19 @@
 // @fullPlayerVideoHeight: @trackImageryHeight * 1.25;
 // @oneTracksPxToScroll: -( 169px + 66px + 12px ) * @introScale;
 // @twoTracksPxToScroll: -( 169px + 66px + 12px ) * @introScale * 2;
-@oneTracksToScroll:  -52% * ( 534 * .91 / 300 );
-@twoTracksToScroll: -104% * ( 534 * .91 / 300 );
-@oneTracksToScrollIPhone6:  -48% * ( 690 * .91 / 388 );
-@twoTracksToScrollIPhone6: -96% * ( 690 * .91 / 388 );
+
+@miniPlayerHIPhone4: 15%;
+@fullPlayerHIPhone4: 89% + 2.3%;
+@oneTracksToScrollIPhone4:  -56% * ( 450 * .89 / 300 );
+@twoTracksToScrollIPhone4: -112% * ( 450 * .89 / 300 ); // ( 450 * .89 / 300 ) = 1.335
+
+@miniPlayerHIPhone6and5: 13.7%;
+@fullPlayerHIPhone6and5: 91% + 2.3%;
+@oneTracksToScrollIPhone6and5:  -48% * ( 690 * .91 / 388 ); // ( 690 * .91 / 388 ) = 1.61829897
+@twoTracksToScrollIPhone6and5: -96% * ( 690 * .91 / 388 );
+// @oneTracksToScrollIPhone5:  -48% * ( 534 * .91 / 300 );
+// @twoTracksToScrollIPhone5: -96% * ( 534 * .91 / 300 ); // ( 534 * .91 / 300 ) = 1.6198
+
 
 
 @summerYellow:      hsl(45, 85%, 60%);
