--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -26,8 +26,8 @@ body {
 
     // &.home { background: @gray-lightest; }
 
-    &.phone { background: @gray-lighter; }
-    &.phone-dark { background: @gray-dark; }
+    &.phone, &.phone-5, &.phone-4 { background: @gray-lighter; }
+    &.phone-dark, &.phone-5-dark, &.phone-4-dark { background: @gray-dark; }
 }
 
 a {
@@ -166,7 +166,7 @@ a {
     }
 
     #intro {
-        .intro-iphone-6( @homeIntroScale, 'light' );
+        .intro-iphone( 6, @homeIntroScale, 'light' );
         
         top: 55%;
         width: 960px * @homeIntroScale;
@@ -225,16 +225,15 @@ a {
 @phoneIntroScale: .5;
 
 .view.phone,
-.view.phone-dark {
-    // background: url('../images/iPhone-5-white-silver.png') no-repeat center;
-    // background-size: auto ( 1600px * @phoneIntroScale );
+.view.phone-dark,
+.view.phone-5,
+.view.phone-5-dark,
+.view.phone-4,
+.view.phone-4-dark {
     position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
-
-    // min-width: 750px * @phoneIntroScale;
-    // min-height: 1334px * @phoneIntroScale;
 
     .carousel {
         z-index: 1;
@@ -284,14 +283,32 @@ a {
 }
 .view.phone {
 
-    #intro { .intro-iphone-6( @phoneIntroScale, 'light' ); .carousel { background-color: white; } }
-
+    #intro { .intro-iphone( 6, @phoneIntroScale, 'light' ); .carousel { background-color: white; } }
     #backdrop { background-color: white; }
 }
 .view.phone-dark {
 
-    #intro { .intro-iphone-6( @phoneIntroScale, 'dark' ); .carousel { background-color: @gray-darker; } }
+    #intro { .intro-iphone( 6, @phoneIntroScale, 'dark' ); .carousel { background-color: @gray-darker; } }
+    #backdrop { background-color: @gray-darker; }
+}
+.view.phone-5 {
 
+    #intro { .intro-iphone( 5, @phoneIntroScale, 'light' ); .carousel { background-color: white; } }
+    #backdrop { background-color: white; }
+}
+.view.phone-5-dark {
+
+    #intro { .intro-iphone( 5, @phoneIntroScale, 'dark' ); .carousel { background-color: @gray-darker; } }
+    #backdrop { background-color: @gray-darker; }
+}
+.view.phone-4 {
+
+    #intro { .intro-iphone( 4, @phoneIntroScale, 'light' ); .carousel { background-color: white; } }
+    #backdrop { background-color: white; }
+}
+.view.phone-4-dark {
+
+    #intro { .intro-iphone( 4, @phoneIntroScale, 'dark' ); .carousel { background-color: @gray-darker; } }
     #backdrop { background-color: @gray-darker; }
 }
 
