--- a/assets/styles/keyframes.less
+++ b/assets/styles/keyframes.less
@@ -4,50 +4,50 @@
 
 //////////////////////////////*/
 
-@-webkit-keyframes incomingTrack {
+@-webkit-keyframes incomingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -webkit-transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                -webkit-transform: scale( 1 ); }
 }
-@-moz-keyframes incomingTrack {
+@-moz-keyframes incomingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -moz-transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                -moz-transform: scale( 1 ); }
 }
-@-o-keyframes incomingTrack {
+@-o-keyframes incomingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -o-transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                -o-transform: scale( 1 ); }
 }
-@keyframes incomingTrack {
+@keyframes incomingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                transform: scale( 1 ); }
 }
 
-@-webkit-keyframes incomingTrackIPhone6 {
+@-webkit-keyframes incomingTrackIPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -webkit-transform: scale( .8 ); }
     70% {             height: 48%; }
     100%{ opacity: 1;                -webkit-transform: scale( 1 ); }
 }
-@-moz-keyframes incomingTrackIPhone6 {
+@-moz-keyframes incomingTrackIPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -moz-transform: scale( .8 ); }
     70% {             height: 48%; }
     100%{ opacity: 1;                -moz-transform: scale( 1 ); }
 }
-@-o-keyframes incomingTrackIPhone6 {
+@-o-keyframes incomingTrackIPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -o-transform: scale( .8 ); }
     70% {             height: 48%; }
     100%{ opacity: 1;                -o-transform: scale( 1 ); }
 }
-@keyframes incomingTrackIPhone6 {
+@keyframes incomingTrackIPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                transform: scale( .8 ); }
     70% {             height: 48%; }
@@ -452,170 +452,170 @@
     100%{ opacity: 0; transform: scale( 1 ); }
 }
 
-@-webkit-keyframes outgoingTrack {
+@-webkit-keyframes outgoingTrackIPhone4 {
     0%  { opacity: 1;                -webkit-transform: scale( 1 ); }
-    30% {             height: 52%; }
+    30% {             height: 56%; }
     50% { opacity: 0;                -webkit-transform: scale( .8 ); }
     100%{ opacity: 0; height: 0; }
 }
-@-moz-keyframes outgoingTrack {
+@-moz-keyframes outgoingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -moz-transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                -moz-transform: scale( 1 ); }
 }
-@-o-keyframes outgoingTrack {
+@-o-keyframes outgoingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -o-transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                -o-transform: scale( 1 ); }
 }
-@keyframes outgoingTrack {
+@keyframes outgoingTrackIPhone4 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                transform: scale( .8 ); }
-    70% {             height: 52%; }
+    70% {             height: 56%; }
     100%{ opacity: 1;                transform: scale( 1 ); }
 }
 
-@-webkit-keyframes outgoingTrackIPhone6 {
+@-webkit-keyframes outgoingTrackIPhone6and5 {
     0%  { opacity: 1;                -webkit-transform: scale( 1 ); }
     30% {             height: 48%; }
     50% { opacity: 0;                -webkit-transform: scale( .8 ); }
     100%{ opacity: 0; height: 0; }
 }
-@-moz-keyframes outgoingTrackiPhone6 {
+@-moz-keyframes outgoingTrackiPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -moz-transform: scale( .8 ); }
     70% {             height: 48%; }
     100%{ opacity: 1;                -moz-transform: scale( 1 ); }
 }
-@-o-keyframes outgoingTrackIPhone6 {
+@-o-keyframes outgoingTrackIPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                -o-transform: scale( .8 ); }
     70% {             height: 48%; }
     100%{ opacity: 1;                -o-transform: scale( 1 ); }
 }
-@keyframes outgoingTrackIPhone6 {
+@keyframes outgoingTrackIPhone6and5 {
     0%  { opacity: 0; height: 0; }
     50% { opacity: 0;                transform: scale( .8 ); }
     70% {             height: 48%; }
     100%{ opacity: 1;                transform: scale( 1 ); }
 }
 
-@-webkit-keyframes digFeedByTwo {
+@-webkit-keyframes digFeedByTwoIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScroll * .3; }
-    55% { margin-top: @twoTracksToScroll * .35; }
-    60% { margin-top: @twoTracksToScroll * .35; }
-    100%{ margin-top: @twoTracksToScroll; }
+    50% { margin-top: @twoTracksToScrollIPhone4 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone4; }
 }
-@-moz-keyframes digFeedByTwo {
+@-moz-keyframes digFeedByTwoIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScroll * .3; }
-    55% { margin-top: @twoTracksToScroll * .35; }
-    60% { margin-top: @twoTracksToScroll * .35; }
-    100%{ margin-top: @twoTracksToScroll; }
+    50% { margin-top: @twoTracksToScrollIPhone4 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone4; }
 }
-@-o-keyframes digFeedByTwo {
+@-o-keyframes digFeedByTwoIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScroll * .3; }
-    55% { margin-top: @twoTracksToScroll * .35; }
-    60% { margin-top: @twoTracksToScroll * .35; }
-    100%{ margin-top: @twoTracksToScroll; }
+    50% { margin-top: @twoTracksToScrollIPhone4 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone4; }
 }
-@keyframes digFeedByTwo {
+@keyframes digFeedByTwoIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScroll * .3; }
-    55% { margin-top: @twoTracksToScroll * .35; }
-    60% { margin-top: @twoTracksToScroll * .35; }
-    100%{ margin-top: @twoTracksToScroll; }
-}
-
-@-webkit-keyframes digFeedByOne {
-    0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScroll * .6; }
-    55% { margin-top: @oneTracksToScroll * .65; }
-    60% { margin-top: @oneTracksToScroll * .65; }
-    100%{ margin-top: @oneTracksToScroll; }
-}
-@-moz-keyframes digFeedByOne {
-    0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScroll * .6; }
-    55% { margin-top: @oneTracksToScroll * .65; }
-    60% { margin-top: @oneTracksToScroll * .65; }
-    100%{ margin-top: @oneTracksToScroll; }
-}
-@-o-keyframes digFeedByOne {
-    0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScroll * .6; }
-    55% { margin-top: @oneTracksToScroll * .65; }
-    60% { margin-top: @oneTracksToScroll * .65; }
-    100%{ margin-top: @oneTracksToScroll; }
-}
-@keyframes digFeedByOne {
-    0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScroll * .6; }
-    55% { margin-top: @oneTracksToScroll * .65; }
-    60% { margin-top: @oneTracksToScroll * .65; }
-    100%{ margin-top: @oneTracksToScroll; }
+    50% { margin-top: @twoTracksToScrollIPhone4 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone4 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone4; }
 }
 
-@-webkit-keyframes digFeedByTwoIPhone6 {
+@-webkit-keyframes digFeedByOneIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScrollIPhone6 * .3; }
-    55% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    60% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    100%{ margin-top: @twoTracksToScrollIPhone6; }
+    50% { margin-top: @oneTracksToScrollIPhone4 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone4; }
 }
-@-moz-keyframes digFeedByTwoIPhone6 {
+@-moz-keyframes digFeedByOneIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScrollIPhone6 * .3; }
-    55% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    60% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    100%{ margin-top: @twoTracksToScrollIPhone6; }
+    50% { margin-top: @oneTracksToScrollIPhone4 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone4; }
 }
-@-o-keyframes digFeedByTwoIPhone6 {
+@-o-keyframes digFeedByOneIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScrollIPhone6 * .3; }
-    55% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    60% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    100%{ margin-top: @twoTracksToScrollIPhone6; }
+    50% { margin-top: @oneTracksToScrollIPhone4 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone4; }
 }
-@keyframes digFeedByTwoIPhone6 {
+@keyframes digFeedByOneIPhone4 {
     0%  { margin-top: 0; }
-    50% { margin-top: @twoTracksToScrollIPhone6 * .3; }
-    55% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    60% { margin-top: @twoTracksToScrollIPhone6 * .35; }
-    100%{ margin-top: @twoTracksToScrollIPhone6; }
+    50% { margin-top: @oneTracksToScrollIPhone4 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone4 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone4; }
 }
 
-@-webkit-keyframes digFeedByOneIPhone6 {
+@-webkit-keyframes digFeedByTwoIPhone6and5 {
     0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScrollIPhone6 * .6; }
-    55% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    60% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    100%{ margin-top: @oneTracksToScrollIPhone6; }
+    50% { margin-top: @twoTracksToScrollIPhone6and5 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone6and5; }
 }
-@-moz-keyframes digFeedByOneIPhone6 {
+@-moz-keyframes digFeedByTwoIPhone6and5 {
     0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScrollIPhone6 * .6; }
-    55% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    60% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    100%{ margin-top: @oneTracksToScrollIPhone6; }
+    50% { margin-top: @twoTracksToScrollIPhone6and5 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone6and5; }
 }
-@-o-keyframes digFeedByOneIPhone6 {
+@-o-keyframes digFeedByTwoIPhone6and5 {
     0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScrollIPhone6 * .6; }
-    55% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    60% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    100%{ margin-top: @oneTracksToScrollIPhone6; }
+    50% { margin-top: @twoTracksToScrollIPhone6and5 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone6and5; }
 }
-@keyframes digFeedByOneIPhone6 {
+@keyframes digFeedByTwoIPhone6and5 {
     0%  { margin-top: 0; }
-    50% { margin-top: @oneTracksToScrollIPhone6 * .6; }
-    55% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    60% { margin-top: @oneTracksToScrollIPhone6 * .65; }
-    100%{ margin-top: @oneTracksToScrollIPhone6; }
+    50% { margin-top: @twoTracksToScrollIPhone6and5 * .3; }
+    55% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    60% { margin-top: @twoTracksToScrollIPhone6and5 * .35; }
+    100%{ margin-top: @twoTracksToScrollIPhone6and5; }
+}
+
+@-webkit-keyframes digFeedByOneIPhone6and5 {
+    0%  { margin-top: 0; }
+    50% { margin-top: @oneTracksToScrollIPhone6and5 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone6and5; }
+}
+@-moz-keyframes digFeedByOneIPhone6and5 {
+    0%  { margin-top: 0; }
+    50% { margin-top: @oneTracksToScrollIPhone6and5 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone6and5; }
+}
+@-o-keyframes digFeedByOneIPhone6and5 {
+    0%  { margin-top: 0; }
+    50% { margin-top: @oneTracksToScrollIPhone6and5 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone6and5; }
+}
+@keyframes digFeedByOneIPhone6and5 {
+    0%  { margin-top: 0; }
+    50% { margin-top: @oneTracksToScrollIPhone6and5 * .6; }
+    55% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    60% { margin-top: @oneTracksToScrollIPhone6and5 * .65; }
+    100%{ margin-top: @oneTracksToScrollIPhone6and5; }
 }
 
 @-webkit-keyframes popUpPlayer {
@@ -656,38 +656,72 @@
     100%{ transform: translateY( 100% ); }
 }
 
-@-webkit-keyframes popDownFullPlayer {
-    0%  { -webkit-transform: translateY( 0% ); height: 93.3%; }
-    100%{ -webkit-transform: translateY( 100% ); height: 13.7%; }
+@-webkit-keyframes popDownFullPlayerIPhone4 {
+    0%  { -webkit-transform: translateY( 0% ); height: @fullPlayerHIPhone4; }
+    100%{ -webkit-transform: translateY( 100% ); height: @miniPlayerHIPhone4; }
 }
-@-moz-keyframes popDownFullPlayer {
-    0%  { -moz-transform: translateY( 0% ); height: 93.3%; }
-    100%{ -moz-transform: translateY( 100% ); height: 13.7%; }
+@-moz-keyframes popDownFullPlayerIPhone4 {
+    0%  { -moz-transform: translateY( 0% ); height: @fullPlayerHIPhone4; }
+    100%{ -moz-transform: translateY( 100% ); height: @miniPlayerHIPhone4; }
 }
-@-o-keyframes popDownFullPlayer {
-    0%  { -o-transform: translateY( 0% ); height: 93.3%; }
-    100%{ -o-transform: translateY( 100% ); height: 13.7%; }
+@-o-keyframes popDownFullPlayerIPhone4 {
+    0%  { -o-transform: translateY( 0% ); height: @fullPlayerHIPhone4; }
+    100%{ -o-transform: translateY( 100% ); height: @miniPlayerHIPhone4; }
 }
-@keyframes popDownFullPlayer {
-    0%  { transform: translateY( 0% ); height: 93.3%; }
-    100%{ transform: translateY( 100% ); height: 13.7%; }
+@keyframes popDownFullPlayerIPhone4 {
+    0%  { transform: translateY( 0% ); height: @fullPlayerHIPhone4; }
+    100%{ transform: translateY( 100% ); height: @miniPlayerHIPhone4; }
 }
 
-@-webkit-keyframes maximizePlayer {
-    0%  { height: 13.7%; }
-    100%{ height: 93.3%; }
+@-webkit-keyframes popDownFullPlayerIPhone6and5 {
+    0%  { -webkit-transform: translateY( 0% ); height: @fullPlayerHIPhone6and5; }
+    100%{ -webkit-transform: translateY( 100% ); height: @miniPlayerHIPhone6and5; }
 }
-@-moz-keyframes maximizePlayer {
-    0%  { height: 13.7%; }
-    100%{ height: 93.3%; }
+@-moz-keyframes popDownFullPlayerIPhone6and5 {
+    0%  { -moz-transform: translateY( 0% ); height: @fullPlayerHIPhone6and5; }
+    100%{ -moz-transform: translateY( 100% ); height: @miniPlayerHIPhone6and5; }
 }
-@-o-keyframes maximizePlayer {
-    0%  { height: 13.7%; }
-    100%{ height: 93.3%; }
+@-o-keyframes popDownFullPlayerIPhone6and5 {
+    0%  { -o-transform: translateY( 0% ); height: @fullPlayerHIPhone6and5; }
+    100%{ -o-transform: translateY( 100% ); height: @miniPlayerHIPhone6and5; }
 }
-@keyframes maximizePlayer {
-    0%  { height: 13.7%; }
-    100%{ height: 93.3%; }
+@keyframes popDownFullPlayerIPhone6and5 {
+    0%  { transform: translateY( 0% ); height: @fullPlayerHIPhone6and5; }
+    100%{ transform: translateY( 100% ); height: @miniPlayerHIPhone6and5; }
+}
+
+@-webkit-keyframes maximizePlayerIPhone4 {
+    0%  { height: @miniPlayerHIPhone4; }
+    100%{ height: @fullPlayerHIPhone4; }
+}
+@-moz-keyframes maximizePlayerIPhone4 {
+    0%  { height: @miniPlayerHIPhone4; }
+    100%{ height: @fullPlayerHIPhone4; }
+}
+@-o-keyframes maximizePlayerIPhone4 {
+    0%  { height: @miniPlayerHIPhone4; }
+    100%{ height: @fullPlayerHIPhone4; }
+}
+@keyframes maximizePlayerIPhone4 {
+    0%  { height: @miniPlayerHIPhone4; }
+    100%{ height: @fullPlayerHIPhone4; }
+}
+
+@-webkit-keyframes maximizePlayerIPhone6and5 {
+    0%  { height: @miniPlayerHIPhone6and5; }
+    100%{ height: @fullPlayerHIPhone6and5; }
+}
+@-moz-keyframes maximizePlayerIPhone6and5 {
+    0%  { height: @miniPlayerHIPhone6and5; }
+    100%{ height: @fullPlayerHIPhone6and5; }
+}
+@-o-keyframes maximizePlayerIPhone6and5 {
+    0%  { height: @miniPlayerHIPhone6and5; }
+    100%{ height: @fullPlayerHIPhone6and5; }
+}
+@keyframes maximizePlayerIPhone6and5 {
+    0%  { height: @miniPlayerHIPhone6and5; }
+    100%{ height: @fullPlayerHIPhone6and5; }
 }
 
 @-webkit-keyframes maximizeVideo {
@@ -724,21 +758,38 @@
     100%{ height: 0; }
 }
 
-@-webkit-keyframes minimizePlayer {
-    0%  { height: 93.3%; }
-    100%{ height: 13.7%; }
+@-webkit-keyframes minimizePlayerIPhone4 {
+    0%  { height: @fullPlayerHIPhone4; }
+    100%{ height: @miniPlayerHIPhone4; }
 }
-@-moz-keyframes minimizePlayer {
-    0%  { height: 93.3%; }
-    100%{ height: 13.7%; }
+@-moz-keyframes minimizePlayerIPhone4 {
+    0%  { height: @fullPlayerHIPhone4; }
+    100%{ height: @miniPlayerHIPhone4; }
 }
-@-o-keyframes minimizePlayer {
-    0%  { height: 93.3%; }
-    100%{ height: 13.7%; }
+@-o-keyframes minimizePlayerIPhone4 {
+    0%  { height: @fullPlayerHIPhone4; }
+    100%{ height: @miniPlayerHIPhone4; }
 }
-@keyframes minimizePlayer {
-    0%  { height: 93.3%; }
-    100%{ height: 13.7%; }
+@keyframes minimizePlayerIPhone4 {
+    0%  { height: @fullPlayerHIPhone4; }
+    100%{ height: @miniPlayerHIPhone4; }
+}
+
+@-webkit-keyframes minimizePlayerIPhone6and5 {
+    0%  { height: @fullPlayerHIPhone6and5; }
+    100%{ height: @miniPlayerHIPhone6and5; }
+}
+@-moz-keyframes minimizePlayerIPhone6and5 {
+    0%  { height: @fullPlayerHIPhone6and5; }
+    100%{ height: @miniPlayerHIPhone6and5; }
+}
+@-o-keyframes minimizePlayerIPhone6and5 {
+    0%  { height: @fullPlayerHIPhone6and5; }
+    100%{ height: @miniPlayerHIPhone6and5; }
+}
+@keyframes minimizePlayerIPhone6and5 {
+    0%  { height: @fullPlayerHIPhone6and5; }
+    100%{ height: @miniPlayerHIPhone6and5; }
 }
 
 @-webkit-keyframes showMiniPlayerControl {
